-     Added the left-hand-side of the formula to the formulas returned by ezMixed (this makes it easier to use the formulas for follow-up exploration)
-     Added ability to specify covariates
-     Fixed bug that might cause an error with specifying "results_as_progress=TRUE"
-     Fixed bug preventing exploration of polynomials greater than 9
- ezResample
-     Added ability to perform computation in parallel using multiple cores (affects ezBoot)
-     Added "resample_between" argument
-     eliminated superfluous "dv" argument
- ezBoot
-     Added ability to perform a residuals bootstrap
-     Switched from "timeCI" progress bar to the simpler/faster "time" progress bar
-     Fixed bug causing error when lmer=TRUE and only 1 predictor variable is supplied
- ezBootPlot
-     Added ability to suppress creating a plot object (useful when simply trying to obtain the bootstrap stats)
- ezPerm
-     Added ability to perform computation in parallel using multiple cores
- ezPredict
-     Fixed bug that prevented obtaining predictions when the name of one variable appeared in the name of other variables.
-     Fixed bug preventing custom specification of to_predict

3.0-0
- added urls in all documentation pointing to the bug-report/feature-request site (https://github.com/mike-lawrence/ez/issues) and the discussion group (http://groups.google.com/group/ez4r).
- changed reshape dependency to reshape2
- ezANOVA
-     fixed bug such that if detailed=F and car:Anova fails, the first line of results from stats:aov is cut off.
-     Added more nuanced treatment of numeric variables
-     Added type argument to specify sums-of-squares type selection (1,2, or 3)
-     Added white.adjust argument to permit heteroscedasticity adjustment (see ?car:Anova)
-     Added return_aov argument to permit returning a stats:aov object along with results (this was requested by a user seeking to use the aov object to compute contrasts)
- ezMixed